--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
     </div>
     <div class="col-md-4">
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras ac purus sollicitudin, tincidunt felis ac, aliquet mauris. Proin sit amet massa laoreet leo congue pulvinar lobortis id nunc.</p>
-        <img src="bird3.jpg" alt="bird3" height="100">
+        <img src="bird3.PNG" alt="bird3" height="100">
     </div>
 </div>
 <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum </p>
