--- a/index.html
+++ b/index.html
@@ -90,6 +90,7 @@
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras ac purus sollicitudin, tincidunt felis ac, aliquet mauris. Proin sit amet massa laoreet leo congue pulvinar lobortis id nunc.</p>
         <img src="bird3.PNG" alt="bird3" height="100">
     </div>
+    </div>
 </div>
 <footer class="container-fluid bg-4 text-center">
 <p>Booster Web Page Made by <a href="http://www.google.com">Sarantsatsral</a></p>
